# contentgem-python

./: .gitignore  AUTOMATION_SUMMARY.md  CHANGELOG.md  FINAL_SETUP_GUIDE.md  GITHUB_ACTIONS_SETUP.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICK_START.md  README.md  REPOSITORY_SETUP.md  build.py  example.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml  workflow.yml
contentgem/: __init__.py  cli.py  client.py  types.py
gemcontent/: __init__.py  client.py
tests/: test_client.py  test_types.py
