[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gemcontent-python"
dynamic = ["version"]
description = "Official Python SDK for GemContent API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GemContent Team", email = "support@gemcontent.com"}
]
maintainers = [
    {name = "GemContent Team", email = "support@gemcontent.com"}
]
keywords = ["gemcontent", "api", "sdk", "python", "content-generation", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: Markup :: HTML",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "typing-extensions>=3.7.4;python_version<'3.8'",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.14.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
    "sphinx>=3.0.0",
    "sphinx-rtd-theme>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/gemcontent/gemcontent-python"
Documentation = "https://gemcontent.com/api-documentation"
Repository = "https://github.com/gemcontent/gemcontent-python"
"Bug Tracker" = "https://github.com/gemcontent/gemcontent-python/issues"
"Source Code" = "https://github.com/gemcontent/gemcontent-python"

[project.scripts]
gemcontent = "gemcontent.cli:main"

[tool.setuptools]
packages = ["gemcontent"]

[tool.setuptools.package-data]
gemcontent = ["py.typed"]

[tool.setuptools_scm]
write_to = "gemcontent/_version.py"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "urllib3.*",
]
ignore_missing_imports = true 